  description and example.
* [NEW] Admin can choose if passwords are stored in plaintext or not. If not, a hash will be used to authenticate
  users and the remind-password feature will generate a new password and send it by email. The new password will
  be immediately due so the user will be forced to change it.
* [NEW] All the Javascript code has been packed into a library
* [NEW] Tiki can now be run on any Web server port.
* [NEW] HTTPS protocol is now supported. Tiki can now run over HTTPS connections.
* [NEW] BiDi support. Added support for BiDi languages. 
  Added BiDi.css file to control BiDi directionality and layout.
* [NEW] Added ~ns~ ~/ns~ syntax to the Wiki to make page sections unparsed. Can be used to put HTML code or
  anything that you want as-is without wiki syntax being parsed.
* [NEW] Fulltext searching added (optional). By enabling this feature, results will be sorted by the relevance of the
  match to the search query.  Also, search results will be ordered first by relevance, and then by section
  (wiki, blog, etc.). Non-fulltext searching continues to sort first by section, and then by 'hits'.
* [NEW] PHPWikiImport feature. You can export pages from a PHPWiki dump into tiki even versions will be created.
* [NEW] Export all wiki feature. As admin you can export the whole wiki as a text dump that can later be imported
  into this or another Tiki site.
* [NEW] Import/export wiki pages. Wiki pages can now be exported to a .txt Mime-alike format and imported from an
  exported file.
* [NEW] Slideshows added, if a wiki page contains more than one -=titlebar=- then you can display it as a slide show.
  This is a very cool feature.
* [NEW] Admin can select the minimum length for a password to be valid
* [NEW] Admin can choose if user passwords must include letters and numbers to be valid
* [NEW] Admin can setup passwords lifetime and Tiki will force the user to change his password once the password
  is expired. 