@@ -30,8 +30,6 @@ Version 1.5 -Regulus-
   users and the remind-password feature will generate a new password and send it by email. The new password will
   be immediately due so the user will be forced to change it.
 * [NEW] All the Javascript code has been packed into a library
-* [NEW] Tiki can now be run on any Web server port.
-* [NEW] HTTPS protocol is now supported. Tiki can now run over HTTPS connections.
 * [NEW] BiDi support. Added support for BiDi languages. 
   Added BiDi.css file to control BiDi directionality and layout.
 * [NEW] Added ~ns~ ~/ns~ syntax to the Wiki to make page sections unparsed. Can be used to put HTML code or
@@ -69,9 +67,13 @@ Version 1.5 -Regulus-
   items can be assigned to a user or group and will appear in the user preferences page (the user's home). Trackers
   and tracker items can be monitored and Tiki will send you an email when something is changed. You can open-close
   tracker items.
+* [NEW] HTTPS protocol is now supported. Tiki can now run over HTTPS connections.
+* [NEW] Tiki can now be run on any web server port, not just 80/443.
 * [NEW] Dates and times are displayed in the time zone specified by the user and/or the administrator.
   The administrator (but not the user) can also specify the date and time format strings.
   Month and weekday names are also localized, if locales are configured correctly on the server.
+* [NEW] The administrator can allow or require HTTPS logins.
+  The user can choose to stay in HTTPS mode after logging in.
 
 Version 1.4.2 -Mira- 
 
